discussion/kv_engine/152890/152890_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39745: RO KVstore should return const RW KVStore

Currently for couchstore we use the RO KVStore for read use cases.
The RO KVStore uses a significant amount of memory unnecessarily
as all usages of the RO KVStore can be performed by the RW KVStore.

Change the function returning the RO KVStore to return s const RW
KVStore so that in a future patch we can remove the RO KVStore
entirely.

Change-Id: I44176b94e5b1da00d58e71c94a53de30a808c287

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-06-21 20:15:02.000000000
Message: 
Uploaded patch set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-21 20:36:15.000000000
Message: 
Patch Set 5: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10095/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket.cc:2338:9: error: "this" argument to member function "resetStats" has type "const KVStore", but function is not marked const [clang-diagnostic-error]
        shard->getROUnderlying()->resetStats();
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore.h:686:10: note: "resetStats" declared here
    void resetStats() {
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10095/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket.cc:2338:9:
error: "this" argument to member function "resetStats" has type "const KVStore", but function is not marked const [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10095/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37135/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kv_bucket.cc(2338): error C2662: "void KVStore::resetStats(void)": cannot convert "this" pointer from "const KVStore" to "KVStore &" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37135/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31700/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kv_bucket.cc:2338:9:
error: "this" argument to member function "resetStats" has type "const KVStore", but function is not marked const
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31700/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10747/ : FAILURE

Compile error at [2021-06-21T20:30:43.854Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kv_bucket.cc:2338:9:
error: "this" argument to member function "resetStats" has type "const KVStore", but function is not marked const
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10747/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11816/ : FAILURE

Compile error at [2021-06-21T20:25:56.571Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kv_bucket.cc:2338:46:
error: passing ?const KVStore? as ?this? argument discards qualifiers [-fpermissive]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11816/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11665/ : FAILURE

Compile error at [2021-06-21T20:17:10.271Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/kv_bucket.cc:2338:46:
error: passing ?const KVStore? as ?this? argument discards qualifiers [-fpermissive]
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11665/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19693/ : FAILURE

Compile error at [2021-06-21T20:33:24.859Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/kv_bucket.cc:2338:9:
error: "this" argument to member function "resetStats" has type "const KVStore", but function is not marked const
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19693/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12110/ : FAILURE

Compile error at [2021-06-21T20:17:24.404Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kv_bucket.cc:2338:9:
error: "this" argument to member function "resetStats" has type "const KVStore", but function is not marked const
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12110/ )

http://cv.jenkins.couchbase.com/job/ming-test2/589/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8690/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
